--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -252,6 +252,112 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
+"_comment": " [CATEGORY]: SPELLS - NAMES",
+
+	"mmorpg.aura.armor": "Armor Aura",
+	"mmorpg.aura.chaos_ailment": "Decree of Chaos Aura",
+	"mmorpg.aura.chaos_damage": "Chaos Damage Aura",
+	"mmorpg.aura.cold_ailment": "Decree of Frost  Aura",
+	"mmorpg.aura.cold_damage": "Cold Damage Aura",
+	"mmorpg.aura.dodge": "Dodge Aura",
+	"mmorpg.aura.energy_reg": "Energy Regeneration Aura",
+	"mmorpg.aura.fire_ailment": "Decree of Fire Aura",
+	"mmorpg.aura.fire_damage": "Fire Damage Aura",
+	"mmorpg.aura.health_reg": "Health Regeneration Aura",
+	"mmorpg.aura.lightning_ailment": "Decree of Lightning Aura",
+	"mmorpg.aura.lightning_damage": "Lightning Damage Aura",
+	"mmorpg.aura.magic_shield": "Magic Shield Aura",
+	"mmorpg.aura.magic_shield_reg": "Magic Shield Regeneration Aura",
+	"mmorpg.aura.mana_reg": "Mana Regeneration Aura",
+	"mmorpg.aura.physical_ailment": "Decree of Pain Aura",
+	"mmorpg.aura.physical_damage": "Physical Damage Aura",
+	"mmorpg.spell.arrow_storm": "Arrow Storm",
+	"mmorpg.spell.astral_totem": "Astral Totem",
+	"mmorpg.spell.awaken_mana": "Inspiration",
+	"mmorpg.spell.backflip": "Backflip",
+	"mmorpg.spell.black_hole": "Black Hole",
+	"mmorpg.spell.charge": "Charge",
+	"mmorpg.spell.charged_bolt": "Charged Bolt",
+	"mmorpg.spell.chilling_field": "Chilling Field",
+	"mmorpg.spell.curse_of_agony": "Curse of Agony",
+	"mmorpg.spell.curse_of_despair": "Curse of Despair",
+	"mmorpg.spell.curse_of_weak": "Curse of Weakness",
+	"mmorpg.spell.dash": "Dash",
+	"mmorpg.spell.draconic_blood": "Draconic Blood",
+	"mmorpg.spell.entangling_seed": "Entangling Seed",
+	"mmorpg.spell.execute": "Execute",
+	"mmorpg.spell.explosive_arrow": "Explosive Arrow",
+	"mmorpg.spell.fire_nova": "Fire Nova",
+	"mmorpg.spell.fire_trap": "Fire Trap",
+	"mmorpg.spell.fireball": "Fire Ball",
+	"mmorpg.spell.flame_strike": "Flame Strike",
+	"mmorpg.spell.frost_nova": "Frost Nova",
+	"mmorpg.spell.frost_trap": "Frost Trap",
+	"mmorpg.spell.frostball": "Ice Ball",
+	"mmorpg.spell.gong_strike": "Gong Strike",
+	"mmorpg.spell.guard_totem": "Guarding Totem",
+	"mmorpg.spell.healing_aura": "Healing Aura",
+	"mmorpg.spell.heart_of_ice": "Heart of Ice",
+	"mmorpg.spell.hunter_potion": "Hunter's Potion",
+	"mmorpg.spell.ice_comet": "Ice Comet",
+	"mmorpg.spell.mage_circle": "Mage Circle",
+	"mmorpg.spell.make_arrows": "Produce Arrows",
+	"mmorpg.spell.mark_for_death": "Marked for Death",
+	"mmorpg.spell.meteor": "Meteor",
+	"mmorpg.spell.nature_balm": "Nature's Balm",
+	"mmorpg.spell.overload": "Overload",
+	"mmorpg.spell.poison_ball": "Poison Ball",
+	"mmorpg.spell.poison_cloud": "Poison Cloud",
+	"mmorpg.spell.poison_trap": "Poison Trap",
+	"mmorpg.spell.power_chord": "Power Chord",
+	"mmorpg.spell.pull": "Pull",
+	"mmorpg.spell.recoil_shot": "Recoil Shot",
+	"mmorpg.spell.refresh": "Refresh",
+	"mmorpg.spell.rejuv_totem": "Rejuvenating Totem",
+	"mmorpg.spell.shooting_star": "Shooting Star",
+	"mmorpg.spell.shout_warn": "Warning Shout",
+	"mmorpg.spell.shred": "Shred",
+	"mmorpg.spell.smoke_bomb": "Smoke Bomb",
+	"mmorpg.spell.song_of_perseverance": "Hymn of Perseverance",
+	"mmorpg.spell.song_of_valor": "Hymn of Valor",
+	"mmorpg.spell.song_of_vigor": "Hymn of Vigor",
+	"mmorpg.spell.taunt": "Taunt",
+	"mmorpg.spell.teleport": "Teleport",
+	"mmorpg.spell.test_command": "Test command",
+	"mmorpg.spell.test_spell": "Poison Ball",
+	"mmorpg.spell.the_hunt": "The Hunt",
+	"mmorpg.spell.tidal_strike": "Tidal Strike",
+	"mmorpg.spell.undying_will": "Undying Will",
+	"mmorpg.spell.vamp_blood": "Vampiric Blood",
+	"mmorpg.spell.water_breath": "Water Breathing",
+	"mmorpg.spell.whirlwind": "Whirlwind",
+	"mmorpg.spell.wish": "Wish",
+	"mmorpg.support_gem.ailment_damage_less_hit_dmg": "Ailment Damage Support Gem",
+	"mmorpg.support_gem.bleed_chance": "Bleed Chance Support Gem",
+	"mmorpg.support_gem.burn_chance": "Burn Chance Support Gem",
+	"mmorpg.support_gem.chaos_damage": "Chaos Damage Support Gem",
+	"mmorpg.support_gem.cold_damage": "Cold Damage Support Gem",
+	"mmorpg.support_gem.crit_chance": "Crit Chance Support Gem",
+	"mmorpg.support_gem.crit_damage": "Crit Damage Support Gem",
+	"mmorpg.support_gem.crit_dmg_less_non_crit_dmg": "Confident Ruin Support Gem",
+	"mmorpg.support_gem.dot_damage": "Damage over Time Support Gem",
+	"mmorpg.support_gem.electrify_chance": "Electrify Chance Support Gem",
+	"mmorpg.support_gem.fire_damage": "Fire Damage Support Gem",
+	"mmorpg.support_gem.freeze_chance": "Freeze Chance Support Gem",
+	"mmorpg.support_gem.lightning_damage": "Lightning Damage Support Gem",
+	"mmorpg.support_gem.mana_saver_dmg": "Mana Conservation Support Gem",
+	"mmorpg.support_gem.melee_damage": "Melee Damage Support Gem",
+	"mmorpg.support_gem.physical_damage": "Physical Damage Support Gem",
+	"mmorpg.support_gem.poison_chance": "Poison Chance Support Gem",
+	"mmorpg.support_gem.ranged_damage": "Ranged Damage Support Gem",
+	"mmorpg.support_gem.rare_cooldown": "Greater Cooldown Support Gem",
+	"mmorpg.support_gem.rare_mana_eff": "Greater Mana Cost Support Gem",
+	"mmorpg.support_gem.spell_damage": "Spell Damage Support Gem",
+	"mmorpg.support_gem.spell_damage_no_crit": "Restrained Destruction Support Gem",
+
+"_comment": " [CATEGORY]: SPELLS - NAMES",
+
+
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 	"mmorpg.affix.archeologists": "Archeologist's",
@@ -331,113 +437,6 @@
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 
-"_comment": " [CATEGORY]: SPELLS - NAMES",
-
-	"ailment_damage_support_gem": "mmorpg.support_gem.ailment_damage_less_hit_dmg",
-	"bleed_chance_support_gem": "mmorpg.support_gem.bleed_chance",
-	"burn_chance_support_gem": "mmorpg.support_gem.burn_chance",
-	"chaos_damage_support_gem": "mmorpg.support_gem.chaos_damage",
-	"cold_damage_support_gem": "mmorpg.support_gem.cold_damage",
-	"confident_ruin_support_gem": "mmorpg.support_gem.crit_dmg_less_non_crit_dmg",
-	"crit_chance_support_gem": "mmorpg.support_gem.crit_chance",
-	"crit_damage_support_gem": "mmorpg.support_gem.crit_damage",
-	"damage_over_time_support_gem": "mmorpg.support_gem.dot_damage",
-	"electrify_chance_support_gem": "mmorpg.support_gem.electrify_chance",
-	"fire_damage_support_gem": "mmorpg.support_gem.fire_damage",
-	"freeze_chance_support_gem": "mmorpg.support_gem.freeze_chance",
-	"greater_cooldown_support_gem": "mmorpg.support_gem.rare_cooldown",
-	"greater_mana_cost_support_gem": "mmorpg.support_gem.rare_mana_eff",
-	"lightning_damage_support_gem": "mmorpg.support_gem.lightning_damage",
-	"mana_conservation_support_gem": "mmorpg.support_gem.mana_saver_dmg",
-	"melee_damage_support_gem": "mmorpg.support_gem.melee_damage",
-	"physical_damage_support_gem": "mmorpg.support_gem.physical_damage",
-	"poison_chance_support_gem": "mmorpg.support_gem.poison_chance",
-	"ranged_damage_support_gem": "mmorpg.support_gem.ranged_damage",
-	"restrained_destruction_support_gem": "mmorpg.support_gem.spell_damage_no_crit",
-	"spell_damage_support_gem": "mmorpg.support_gem.spell_damage",
-	"mmorpg.aura.armor": "Armor Aura",
-	"mmorpg.aura.chaos_ailment": "Decree of Chaos Aura",
-	"mmorpg.aura.chaos_damage": "Chaos Damage Aura",
-	"mmorpg.aura.cold_ailment": "Decree of Frost  Aura",
-	"mmorpg.aura.cold_damage": "Cold Damage Aura",
-	"mmorpg.aura.dodge": "Dodge Aura",
-	"mmorpg.aura.energy_reg": "Energy Regeneration Aura",
-	"mmorpg.aura.fire_ailment": "Decree of Fire Aura",
-	"mmorpg.aura.fire_damage": "Fire Damage Aura",
-	"mmorpg.aura.health_reg": "Health Regeneration Aura",
-	"mmorpg.aura.lightning_ailment": "Decree of Lightning Aura",
-	"mmorpg.aura.lightning_damage": "Lightning Damage Aura",
-	"mmorpg.aura.magic_shield": "Magic Shield Aura",
-	"mmorpg.aura.magic_shield_reg": "Magic Shield Regeneration Aura",
-	"mmorpg.aura.mana_reg": "Mana Regeneration Aura",
-	"mmorpg.aura.physical_ailment": "Decree of Pain Aura",
-	"mmorpg.aura.physical_damage": "Physical Damage Aura",
-	"mmorpg.spell.arrow_storm": "Arrow Storm",
-	"mmorpg.spell.astral_totem": "Astral Totem",
-	"mmorpg.spell.awaken_mana": "Inspiration",
-	"mmorpg.spell.backflip": "Backflip",
-	"mmorpg.spell.black_hole": "Black Hole",
-	"mmorpg.spell.charge": "Charge",
-	"mmorpg.spell.charged_bolt": "Charged Bolt",
-	"mmorpg.spell.chilling_field": "Chilling Field",
-	"mmorpg.spell.curse_of_agony": "Curse of Agony",
-	"mmorpg.spell.curse_of_despair": "Curse of Despair",
-	"mmorpg.spell.curse_of_weak": "Curse of Weakness",
-	"mmorpg.spell.dash": "Dash",
-	"mmorpg.spell.draconic_blood": "Draconic Blood",
-	"mmorpg.spell.entangling_seed": "Entangling Seed",
-	"mmorpg.spell.execute": "Execute",
-	"mmorpg.spell.explosive_arrow": "Explosive Arrow",
-	"mmorpg.spell.fire_nova": "Fire Nova",
-	"mmorpg.spell.fire_trap": "Fire Trap",
-	"mmorpg.spell.fireball": "Fire Ball",
-	"mmorpg.spell.flame_strike": "Flame Strike",
-	"mmorpg.spell.frost_nova": "Frost Nova",
-	"mmorpg.spell.frost_trap": "Frost Trap",
-	"mmorpg.spell.frostball": "Ice Ball",
-	"mmorpg.spell.gong_strike": "Gong Strike",
-	"mmorpg.spell.guard_totem": "Guarding Totem",
-	"mmorpg.spell.healing_aura": "Healing Aura",
-	"mmorpg.spell.heart_of_ice": "Heart of Ice",
-	"mmorpg.spell.hunter_potion": "Hunter's Potion",
-	"mmorpg.spell.ice_comet": "Ice Comet",
-	"mmorpg.spell.mage_circle": "Mage Circle",
-	"mmorpg.spell.make_arrows": "Produce Arrows",
-	"mmorpg.spell.mark_for_death": "Marked for Death",
-	"mmorpg.spell.meteor": "Meteor",
-	"mmorpg.spell.nature_balm": "Nature's Balm",
-	"mmorpg.spell.overload": "Overload",
-	"mmorpg.spell.poison_arrow": "Poison Arrow",
-	"mmorpg.spell.poison_ball": "Poison Ball",
-	"mmorpg.spell.poison_cloud": "Poison Cloud",
-	"mmorpg.spell.poison_trap": "Poison Trap",
-	"mmorpg.spell.power_chord": "Power Chord",
-	"mmorpg.spell.pull": "Pull",
-	"mmorpg.spell.recoil_shot": "Recoil Shot",
-	"mmorpg.spell.refresh": "Refresh",
-	"mmorpg.spell.rejuv_totem": "Rejuvenating Totem",
-	"mmorpg.spell.shooting_star": "Shooting Star",
-	"mmorpg.spell.shout_warn": "Warning Shout",
-	"mmorpg.spell.shred": "Shred",
-	"mmorpg.spell.smoke_bomb": "Smoke Bomb",
-	"mmorpg.spell.song_of_perseverance": "Hymn of Perseverance",
-	"mmorpg.spell.song_of_valor": "Hymn of Valor",
-	"mmorpg.spell.song_of_vigor": "Hymn of Vigor",
-	"mmorpg.spell.taunt": "Taunt",
-	"mmorpg.spell.teleport": "Teleport",
-	"mmorpg.spell.test_command": "Test command",
-	"mmorpg.spell.test_spell": "Poison Ball",
-	"mmorpg.spell.the_hunt": "The Hunt",
-	"mmorpg.spell.tidal_strike": "Tidal Strike",
-	"mmorpg.spell.undying_will": "Undying Will",
-	"mmorpg.spell.vamp_blood": "Vampiric Blood",
-	"mmorpg.spell.water_breath": "Water Breathing",
-	"mmorpg.spell.whirlwind": "Whirlwind",
-	"mmorpg.spell.wish": "Wish",
-
-"_comment": " [CATEGORY]: SPELLS - NAMES",
-
-
 "_comment": " [CATEGORY]: ONEOFAKIND - NAMES",
 
 	"mmorpg.one_of_a_kind.arrow_storm_mod": "Arrow Storm Modifier",
@@ -475,7 +474,6 @@
 	"mmorpg.one_of_a_kind.meteor_mod": "Meteor Modifier",
 	"mmorpg.one_of_a_kind.nature_balm_mod": "Nature's Balm Modifier",
 	"mmorpg.one_of_a_kind.overload_mod": "Overload Modifier",
-	"mmorpg.one_of_a_kind.poison_arrow_mod": "Poison Arrow Modifier",
 	"mmorpg.one_of_a_kind.poison_ball_mod": "Poison Ball Modifier",
 	"mmorpg.one_of_a_kind.poison_cloud_mod": "Poison Cloud Modifier",
 	"mmorpg.one_of_a_kind.poison_trap_mod": "Poison Trap Modifier",
@@ -1242,28 +1240,6 @@
 "_comment": " [CATEGORY]: STATS - NAMES",
 
 
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
-	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
-	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
-	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
-	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
-	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
-	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
-	"mmorpg.unique_gear.insight.name": "Insight",
-	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
-	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
-	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
-	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
-	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
-	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
-	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
-	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
-
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 	"mmorpg.gear_type.axe": "Axe",
@@ -1302,6 +1278,28 @@
 	"mmorpg.gearslot.sword": "Sword",
 
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
+	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
+	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
+	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
+	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
+	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
+	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
+	"mmorpg.unique_gear.insight.name": "Insight",
+	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
+	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
+	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
+	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
+	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
+	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
+	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
+	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1544,7 +1542,6 @@
 	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
 	"spell.desc.nature_balm": "Gives buff to allies nearby:",
 	"spell.desc.overload": "Gives effect to self.",
-	"spell.desc.poison_arrow": "Shoot an arrow, dealing [calc:poison_arrow] §6☀ Physical§7 Damage around it and poisoning enemies.",
 	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
 	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
 	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage damage in area around itself.",
