--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -1239,6 +1239,28 @@
 "_comment": " [CATEGORY]: STATS - NAMES",
 
 
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
+	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
+	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
+	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
+	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
+	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
+	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
+	"mmorpg.unique_gear.insight.name": "Insight",
+	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
+	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
+	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
+	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
+	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
+	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
+	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
+	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 	"mmorpg.gear_type.axe": "Axe",
@@ -1277,28 +1299,6 @@
 	"mmorpg.gearslot.sword": "Sword",
 
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
-	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
-	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
-	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
-	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
-	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
-	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
-	"mmorpg.unique_gear.insight.name": "Insight",
-	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
-	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
-	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
-	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
-	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
-	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
-	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
-	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
-
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1340,68 +1340,6 @@
 	"item.mmorpg.currency.desc.orb_of_linking": "Re-rolls gem links, min is 1, max is 5 links.",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
-
-
-"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
-
-	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
-	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
-	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
-	"spell.desc.backflip": "Jump back and gain Cleanse for a short time.",
-	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole]§d☀ Elemental§7 Damage when it expires.",
-	"spell.desc.charge": "Charge in a direction, stopping upon first enemy hit to deal [calc:charge] §6☀ Physical§7 Damage in radius.",
-	"spell.desc.charged_bolt": "Shoot a charged arrow that goes through enemies and deals [calc:charged_bolt] §6☀ Physical§7 Damage in radius and slows.",
-	"spell.desc.chilling_field": "Freeze area of sight, damaging enemies for [calc:chilling_field]§b☀ Cold§7 Damage every second.",
-	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] §d☀ Elemental§7 Damage",
-	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] §d☀ Elemental§7 Damage",
-	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] §d☀ Elemental§7 Damage",
-	"spell.desc.dash": "Dash in your direction and gain slowfall.",
-	"spell.desc.draconic_blood": "Gives effect to nearby allies.",
-	"spell.desc.entangling_seed": "Throw out a seed that explodes and petrifies enemies.",
-	"spell.desc.execute": "Slash enemies in front of you for [calc:execute] §6☀ Physical§7 Damage",
-	"spell.desc.explosive_arrow": "Shoot an arrow that does [calc:explosive_arrow] §6☀ Physical§7 Damage around it",
-	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage damage in area around itself.",
-	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
-	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
-	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
-	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage damage in area around itself.",
-	"spell.desc.frostball": "Throw out a ball of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
-	"spell.desc.gong_strike": "Bash enemies around you for [calc:gong_strike] §6☀ Physical§7 Damage",
-	"spell.desc.guard_totem": "Summon a totem which gives [calc:totem_guard] shield to allies around it.",
-	"spell.desc.healing_aura": "Heal allies around you for [calc:healing_aura] health",
-	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health",
-	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health",
-	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] §b☀ Cold§7 Damage",
-	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it provides you a buff. After a certain duration you will be teleported to its location.",
-	"spell.desc.make_arrows": "Produce a stack of arrows.",
-	"spell.desc.mark_for_death": "Mark your target for death, making them more vulnerable to damage.",
-	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
-	"spell.desc.nature_balm": "Gives buff to allies nearby:",
-	"spell.desc.overload": "Gives effect to self.",
-	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
-	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
-	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage damage in area around itself.",
-	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] §6☀ Physical§7 Damage and slowing them.",
-	"spell.desc.refresh": "Refreshes all your spell cooldowns by 1 minute.",
-	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
-	"spell.desc.shooting_star": "Shoots a star that heals allies for [calc:shooting_star] health on hit.",
-	"spell.desc.shout_warn": "Let out a warning shout, giving a [calc:shout_warn] Shield to all nearby allies.",
-	"spell.desc.shred": "Slash all nearby enemies, dealing [calc:shred] §6☀ Physical§7 Damage damage and reducing their defenses.",
-	"spell.desc.smoke_bomb": "Throw out a smoke bomb, blinding enemies and reducing threat.",
-	"spell.desc.song_of_perseverance": "Give a stack of Perseverance to all allies around you.",
-	"spell.desc.song_of_valor": "Give a stack of Valor to all allies around you.",
-	"spell.desc.song_of_vigor": "Give a stack of Vigor to all allies around you.",
-	"spell.desc.taunt": "Shout, making enemies nearby want to attack you. Generates [calc:taunt] threat.",
-	"spell.desc.teleport": "Teleport yourself in the direction you're looking at.",
-	"spell.desc.the_hunt": "Gain Night vision and set all enemies around you to glow.",
-	"spell.desc.tidal_strike": "Strike enemies in front of you for [calc:tidal_strike] §b☀ Cold§7 Damage",
-	"spell.desc.undying_will": "Gives buff to self.",
-	"spell.desc.vamp_blood": "Gives effect to nearby allies.",
-	"spell.desc.water_breath": "Give Water Breathing to allies around you.",
-	"spell.desc.whirlwind": "Strike enemies around you for [calc:whirlwind] §c☀ Fire§7 Damage. Scales with attack speed.",
-	"spell.desc.wish": "Heal allies around you for [calc:healing_aura] health",
-
-"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
 
 
 "_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
@@ -1565,7 +1503,69 @@
 	"mmorpg.stat_desc.water_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.weapon_damage": "Used for certain spells",
 
-"_comment": " [CATEGORY]: STATS - DESCRIPTIONS"
+"_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
+
+
+"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
+
+	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
+	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
+	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
+	"spell.desc.backflip": "Jump back and gain Cleanse for a short time.",
+	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole]§d☀ Elemental§7 Damage when it expires.",
+	"spell.desc.charge": "Charge in a direction, stopping upon first enemy hit to deal [calc:charge] §6☀ Physical§7 Damage in radius.",
+	"spell.desc.charged_bolt": "Shoot a charged arrow that goes through enemies and deals [calc:charged_bolt] §6☀ Physical§7 Damage in radius and slows.",
+	"spell.desc.chilling_field": "Freeze area of sight, damaging enemies for [calc:chilling_field]§b☀ Cold§7 Damage every second.",
+	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] §d☀ Elemental§7 Damage",
+	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] §d☀ Elemental§7 Damage",
+	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] §d☀ Elemental§7 Damage",
+	"spell.desc.dash": "Dash in your direction and gain slowfall.",
+	"spell.desc.draconic_blood": "Gives effect to nearby allies.",
+	"spell.desc.entangling_seed": "Throw out a seed that explodes and petrifies enemies.",
+	"spell.desc.execute": "Slash enemies in front of you for [calc:execute] §6☀ Physical§7 Damage",
+	"spell.desc.explosive_arrow": "Shoot an arrow that does [calc:explosive_arrow] §6☀ Physical§7 Damage around it",
+	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage damage in area around itself.",
+	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
+	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
+	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
+	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage damage in area around itself.",
+	"spell.desc.frostball": "Throw out a ball of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
+	"spell.desc.gong_strike": "Bash enemies around you for [calc:gong_strike] §6☀ Physical§7 Damage",
+	"spell.desc.guard_totem": "Summon a totem which gives [calc:totem_guard] shield to allies around it.",
+	"spell.desc.healing_aura": "Heal allies around you for [calc:healing_aura] health",
+	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health",
+	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health",
+	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] §b☀ Cold§7 Damage",
+	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it provides you a buff. After a certain duration you will be teleported to its location.",
+	"spell.desc.make_arrows": "Produce a stack of arrows.",
+	"spell.desc.mark_for_death": "Mark your target for death, making them more vulnerable to damage.",
+	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
+	"spell.desc.nature_balm": "Gives buff to allies nearby:",
+	"spell.desc.overload": "Gives effect to self.",
+	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
+	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
+	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage damage in area around itself.",
+	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] §6☀ Physical§7 Damage and slowing them.",
+	"spell.desc.refresh": "Refreshes all your spell cooldowns by 1 minute.",
+	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
+	"spell.desc.shooting_star": "Shoots a star that heals allies for [calc:shooting_star] health on hit.",
+	"spell.desc.shout_warn": "Let out a warning shout, giving a [calc:shout_warn] Shield to all nearby allies.",
+	"spell.desc.shred": "Slash all nearby enemies, dealing [calc:shred] §6☀ Physical§7 Damage damage and reducing their defenses.",
+	"spell.desc.smoke_bomb": "Throw out a smoke bomb, blinding enemies and reducing threat.",
+	"spell.desc.song_of_perseverance": "Give a stack of Perseverance to all allies around you.",
+	"spell.desc.song_of_valor": "Give a stack of Valor to all allies around you.",
+	"spell.desc.song_of_vigor": "Give a stack of Vigor to all allies around you.",
+	"spell.desc.taunt": "Shout, making enemies nearby want to attack you. Generates [calc:taunt] threat.",
+	"spell.desc.teleport": "Teleport yourself in the direction you're looking at.",
+	"spell.desc.the_hunt": "Gain Night vision and set all enemies around you to glow.",
+	"spell.desc.tidal_strike": "Strike enemies in front of you for [calc:tidal_strike] §b☀ Cold§7 Damage",
+	"spell.desc.undying_will": "Gives buff to self.",
+	"spell.desc.vamp_blood": "Gives effect to nearby allies.",
+	"spell.desc.water_breath": "Give Water Breathing to allies around you.",
+	"spell.desc.whirlwind": "Strike enemies around you for [calc:whirlwind] §c☀ Fire§7 Damage. Scales with attack speed.",
+	"spell.desc.wish": "Heal allies around you for [calc:healing_aura] health",
+
+"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS"
 
 
 }
