--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -252,85 +252,6 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-	"mmorpg.affix.archeologists": "Archeologist's",
-	"mmorpg.affix.armored_mobs": "Armored",
-	"mmorpg.affix.azure": "Azure",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
-	"mmorpg.affix.chaos_ele_mobs": "Of Diseases",
-	"mmorpg.affix.chaos_res": "Of the Snake",
-	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
-	"mmorpg.affix.chaos_wep_dmg_dun": "Poisonous",
-	"mmorpg.affix.crit_prefix": "Critical",
-	"mmorpg.affix.desolation": "Desolation",
-	"mmorpg.affix.energy_reg": "Invirogating",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
-	"mmorpg.affix.fire_ele_mobs": "Of Embers",
-	"mmorpg.affix.fire_res": "Of the Drake",
-	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg_dun": "Burning",
-	"mmorpg.affix.focused": "Focused",
-	"mmorpg.affix.glimmering": "Glimmering",
-	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
-	"mmorpg.affix.heal_crit_prefix": "Truthful",
-	"mmorpg.affix.heal_suff": "Of Restoration",
-	"mmorpg.affix.item_both_armor": "Reinforced",
-	"mmorpg.affix.item_both_dodge": "Scaled",
-	"mmorpg.affix.item_both_magic_shield": "Fortified",
-	"mmorpg.affix.item_flat_armor": "Reinforced",
-	"mmorpg.affix.item_flat_dodge": "Scaled",
-	"mmorpg.affix.item_flat_magic_shield": "Fortified",
-	"mmorpg.affix.item_perc_armor": "Reinforced",
-	"mmorpg.affix.item_perc_dodge": "Scaled",
-	"mmorpg.affix.item_perc_magic_shield": "Fortified",
-	"mmorpg.affix.life_on_hit_dun": "Of Vampires",
-	"mmorpg.affix.lightning_res": "Of the Yeti",
-	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
-	"mmorpg.affix.mana_reg": "Soothing",
-	"mmorpg.affix.mana_thief": "Mana Thief's",
-	"mmorpg.affix.of_affluence": "Of Affluence",
-	"mmorpg.affix.of_brutality": "Of Brutality",
-	"mmorpg.affix.of_consumption": "Of Consumption",
-	"mmorpg.affix.of_devastation": "Of Devastation",
-	"mmorpg.affix.of_energy": "Of Energy",
-	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
-	"mmorpg.affix.of_gluttony": "Of Gluttony",
-	"mmorpg.affix.of_less_cd": "Of Repetition",
-	"mmorpg.affix.of_mana": "Of Mana",
-	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
-	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
-	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
-	"mmorpg.affix.of_the_sky": "Of the Sky",
-	"mmorpg.affix.of_the_titan": "Of the Titan",
-	"mmorpg.affix.of_the_troll": "Of The Troll",
-	"mmorpg.affix.of_the_wind": "Of the Wind",
-	"mmorpg.affix.of_treasure": "Of Treasure",
-	"mmorpg.affix.of_vampirism": "Of Vampirism",
-	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
-	"mmorpg.affix.physical_wep_dmg_dun": "Tyrannical",
-	"mmorpg.affix.precise": "Precise",
-	"mmorpg.affix.scavanger": "Scavanger",
-	"mmorpg.affix.seraphim": "Seraphim's",
-	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
-	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
-	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
-	"mmorpg.affix.true_hit": "True Hit",
-	"mmorpg.affix.vampiric": "Vampiric",
-	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
-	"mmorpg.affix.water_ele_mobs": "Of Frost",
-	"mmorpg.affix.water_res": "Of the Storm",
-	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg_dun": "Freezing",
-	"mmorpg.affix.wep_item_both": "Miserable",
-	"mmorpg.affix.wep_item_flat": "Deadly",
-	"mmorpg.affix.wep_item_perc": "Cruel",
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 	"mmorpg.aura.armor": "Armor Aura",
@@ -437,6 +358,85 @@
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+	"mmorpg.affix.archeologists": "Archeologist's",
+	"mmorpg.affix.armored_mobs": "Armored",
+	"mmorpg.affix.azure": "Azure",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
+	"mmorpg.affix.chaos_ele_mobs": "Of Diseases",
+	"mmorpg.affix.chaos_res": "Of the Snake",
+	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
+	"mmorpg.affix.chaos_wep_dmg_dun": "Poisonous",
+	"mmorpg.affix.crit_prefix": "Critical",
+	"mmorpg.affix.desolation": "Desolation",
+	"mmorpg.affix.energy_reg": "Invirogating",
+	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
+	"mmorpg.affix.fire_ele_mobs": "Of Embers",
+	"mmorpg.affix.fire_res": "Of the Drake",
+	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg_dun": "Burning",
+	"mmorpg.affix.focused": "Focused",
+	"mmorpg.affix.glimmering": "Glimmering",
+	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
+	"mmorpg.affix.heal_crit_prefix": "Truthful",
+	"mmorpg.affix.heal_suff": "Of Restoration",
+	"mmorpg.affix.item_both_armor": "Reinforced",
+	"mmorpg.affix.item_both_dodge": "Scaled",
+	"mmorpg.affix.item_both_magic_shield": "Fortified",
+	"mmorpg.affix.item_flat_armor": "Reinforced",
+	"mmorpg.affix.item_flat_dodge": "Scaled",
+	"mmorpg.affix.item_flat_magic_shield": "Fortified",
+	"mmorpg.affix.item_perc_armor": "Reinforced",
+	"mmorpg.affix.item_perc_dodge": "Scaled",
+	"mmorpg.affix.item_perc_magic_shield": "Fortified",
+	"mmorpg.affix.life_on_hit_dun": "Of Vampires",
+	"mmorpg.affix.lightning_res": "Of the Yeti",
+	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
+	"mmorpg.affix.mana_reg": "Soothing",
+	"mmorpg.affix.mana_thief": "Mana Thief's",
+	"mmorpg.affix.of_affluence": "Of Affluence",
+	"mmorpg.affix.of_brutality": "Of Brutality",
+	"mmorpg.affix.of_consumption": "Of Consumption",
+	"mmorpg.affix.of_devastation": "Of Devastation",
+	"mmorpg.affix.of_energy": "Of Energy",
+	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
+	"mmorpg.affix.of_gluttony": "Of Gluttony",
+	"mmorpg.affix.of_less_cd": "Of Repetition",
+	"mmorpg.affix.of_mana": "Of Mana",
+	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
+	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
+	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
+	"mmorpg.affix.of_the_sky": "Of the Sky",
+	"mmorpg.affix.of_the_titan": "Of the Titan",
+	"mmorpg.affix.of_the_troll": "Of The Troll",
+	"mmorpg.affix.of_the_wind": "Of the Wind",
+	"mmorpg.affix.of_treasure": "Of Treasure",
+	"mmorpg.affix.of_vampirism": "Of Vampirism",
+	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
+	"mmorpg.affix.physical_wep_dmg_dun": "Tyrannical",
+	"mmorpg.affix.precise": "Precise",
+	"mmorpg.affix.scavanger": "Scavanger",
+	"mmorpg.affix.seraphim": "Seraphim's",
+	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
+	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
+	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
+	"mmorpg.affix.true_hit": "True Hit",
+	"mmorpg.affix.vampiric": "Vampiric",
+	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
+	"mmorpg.affix.water_ele_mobs": "Of Frost",
+	"mmorpg.affix.water_res": "Of the Storm",
+	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg_dun": "Freezing",
+	"mmorpg.affix.wep_item_both": "Miserable",
+	"mmorpg.affix.wep_item_flat": "Deadly",
+	"mmorpg.affix.wep_item_perc": "Cruel",
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+
 "_comment": " [CATEGORY]: ONEOFAKIND - NAMES",
 
 	"mmorpg.one_of_a_kind.arrow_storm_mod": "Arrow Storm Modifier",
@@ -521,15 +521,6 @@
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
 
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"effect.mmorpg.beneficial.1": "Antidote",
@@ -570,24 +561,70 @@
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+
 "_comment": " [CATEGORY]: TALENTS - NAMES",
 
+	"mmorpg.talent.all_all_damage_big": "Major All Damage",
+	"mmorpg.talent.all_chaos_damage_big": "Major Chaos Damage",
+	"mmorpg.talent.all_elemental_damage_big": "Major Elemental Damage",
+	"mmorpg.talent.all_fire_damage_big": "Major Fire Damage",
+	"mmorpg.talent.all_lightning_damage_big": "Major Lightning Damage",
+	"mmorpg.talent.all_penetration_big": "Major All Penetration",
+	"mmorpg.talent.all_physical_damage_big": "Major Physical Damage",
+	"mmorpg.talent.all_water_damage_big": "Major Cold Damage",
+	"mmorpg.talent.armor_percent_big": "Major Armor",
 	"mmorpg.talent.blood_mage": "Blood Mage",
+	"mmorpg.talent.cdr_big": "Major Cooldown Reduction",
+	"mmorpg.talent.chaos_penetration_big": "Major Chaos Penetration",
+	"mmorpg.talent.critical_damage_big": "Major Crit Damage",
+	"mmorpg.talent.critical_hit_big": "Major Crit Chance",
+	"mmorpg.talent.dex_dmg_big": "Major Ranged Damage",
+	"mmorpg.talent.dexterity_big": "Major Dexterity",
 	"mmorpg.talent.divinity": "Divinity",
+	"mmorpg.talent.dodge_percent_big": "Major Dodge Rating",
+	"mmorpg.talent.dot_dmg_big": "Major Damage over Time",
+	"mmorpg.talent.elemental_penetration_big": "Major Elemental Penetration",
 	"mmorpg.talent.elemental_purity": "Elemental Purity",
+	"mmorpg.talent.energy_percent_big": "Major Energy",
+	"mmorpg.talent.energy_regen_percent_big": "Major Energy Regen",
+	"mmorpg.talent.fire_penetration_big": "Major Fire Penetration",
+	"mmorpg.talent.guardian": "Guardian",
 	"mmorpg.talent.harmony": "Harmony",
-	"mmorpg.talent.hunter": "Hunter",
+	"mmorpg.talent.health_percent_big": "Major Health",
+	"mmorpg.talent.health_regen_percent_big": "Major Health Regen",
+	"mmorpg.talent.int_dmg_big": "Major Spell Damage",
+	"mmorpg.talent.intelligence_big": "Major Intelligence",
+	"mmorpg.talent.lifesteal_big": "Major Lifesteal",
+	"mmorpg.talent.lightning_penetration_big": "Major Lightning Penetration",
 	"mmorpg.talent.mage": "Mage",
+	"mmorpg.talent.magic_shield_percent_big": "Major Magic Shield",
+	"mmorpg.talent.magic_shield_regen_percent_big": "Major Magic Shield Regen",
 	"mmorpg.talent.mana_battery": "Mana Battery",
+	"mmorpg.talent.mana_percent_big": "Major Mana",
+	"mmorpg.talent.mana_regen_percent_big": "Major Mana Regen",
 	"mmorpg.talent.mantra": "Mantra",
 	"mmorpg.talent.ms_all_in": "Stare of Abyss",
+	"mmorpg.talent.ranger": "Ranger",
 	"mmorpg.talent.refined_taste": "Refined Taste",
 	"mmorpg.talent.sniper": "Sniper",
+	"mmorpg.talent.spell_lifesteal_big": "Major Spell Lifesteal",
+	"mmorpg.talent.spirit_cost_big": "Major Spirit Cost Reduction",
 	"mmorpg.talent.steady_hand": "Steady Hand",
+	"mmorpg.talent.str_dmg_big": "Major Melee Damage",
+	"mmorpg.talent.strength_big": "Major Strength",
 	"mmorpg.talent.tormentor": "Tormentor",
 	"mmorpg.talent.true_hit": "True Hit",
 	"mmorpg.talent.warlock": "Warlock",
 	"mmorpg.talent.warrior": "Warrior",
+	"mmorpg.talent.water_penetration_big": "Major Cold Penetration",
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
 
@@ -1203,6 +1240,7 @@
 	"mmorpg.stat.spell_lifesteal": "Spell Lifesteal",
 	"mmorpg.stat.spell_lightning_damage": "Lightning Skill Damage",
 	"mmorpg.stat.spell_water_damage": "Cold Skill Damage",
+	"mmorpg.stat.spirit_cost": "Spirit Cost Reduction",
 	"mmorpg.stat.staff_damage": "Staff Damage",
 	"mmorpg.stat.staff_spell_cdr": "Staff Spell Spell Cooldown Reduction",
 	"mmorpg.stat.staff_spell_spell_dmg": "Staff Spell Spell Damage",
@@ -1234,28 +1272,6 @@
 	"mmorpg.stat.weapon_damage": "Weapon Damage",
 
 "_comment": " [CATEGORY]: STATS - NAMES",
-
-
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
-	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
-	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
-	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
-	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
-	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
-	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
-	"mmorpg.unique_gear.insight.name": "Insight",
-	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
-	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
-	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
-	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
-	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
-	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
-	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
-	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
-
-"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
@@ -1294,6 +1310,28 @@
 	"mmorpg.gearslot.sword": "Sword",
 
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
+	"mmorpg.unique_gear.autumn_harvest.name": "Autumn Harvest",
+	"mmorpg.unique_gear.azuna_ring.name": "Azuna's Eternal Decree",
+	"mmorpg.unique_gear.bone_shatterer.name": "Bone Shatterer",
+	"mmorpg.unique_gear.ghast_necklace.name": "Ghast Tear",
+	"mmorpg.unique_gear.ghostly_shores.name": "Ghostly Shores",
+	"mmorpg.unique_gear.heavenly_tear.name": "Heavenly Tear",
+	"mmorpg.unique_gear.insight.name": "Insight",
+	"mmorpg.unique_gear.mana_dominion.name": "Dominion of Mana",
+	"mmorpg.unique_gear.playful_hope.name": "Playful Hope",
+	"mmorpg.unique_gear.rabbit_paw.name": "Rabbit's Paw",
+	"mmorpg.unique_gear.skull_of_spirits.name": "Skull of Spirits",
+	"mmorpg.unique_gear.spring_blossoms.name": "Spring Blossoms",
+	"mmorpg.unique_gear.summer_heat.name": "Summer Heat",
+	"mmorpg.unique_gear.winter_chill.name": "Winter Chill",
+	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
+
+"_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1484,6 +1522,7 @@
 	"mmorpg.stat_desc.spell_lifesteal": "Restore % of spell damage as health.",
 	"mmorpg.stat_desc.spell_lightning_damage": "Increases damage of spells of that element.",
 	"mmorpg.stat_desc.spell_water_damage": "Increases damage of spells of that element.",
+	"mmorpg.stat_desc.spirit_cost": "Reduces spirit cost needed to socket aura gems.",
 	"mmorpg.stat_desc.staff_damage": "Increases damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.staff_spell_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.str_dmg": "Magic damage are mage spells, like fireball.",
